# cobin

./: Cargo.toml
examples/: hello_triangle.metal  hello_triangle.rs
src/: app_kit.rs  auto_release.rs  core_animation.rs  core_foundation.rs  core_graphics.rs  dispatch.rs  foundation.rs  kernel.rs  lib.rs  metal.rs  obj.rs  runtime.rs  strong.rs  util.rs
src/app_kit/: ns_application.rs  ns_event.rs  ns_menu.rs  ns_menu_item.rs  ns_view.rs  ns_window.rs
src/core_animation/: ca_layer.rs  ca_metal_drawable.rs  ca_metal_layer.rs
src/foundation/: ns_array.rs  ns_bundle.rs  ns_date.rs  ns_error.rs  ns_mutable_array.rs  ns_run_loop_mode.rs  ns_string.rs
src/metal/: mtl_acceleration_structure.rs  mtl_acceleration_structure_command_encoder.rs  mtl_acceleration_structure_descriptor.rs  mtl_acceleration_structure_geometry_descriptor.rs  mtl_acceleration_structure_triangle_geometry_descriptor.rs  mtl_blit_command_encoder.rs  mtl_buffer.rs  mtl_command_buffer.rs  mtl_command_encoder.rs  mtl_command_queue.rs  mtl_compile_options.rs  mtl_compute_command_encoder.rs  mtl_compute_pipeline_descriptor.rs  mtl_compute_pipeline_reflection.rs  mtl_compute_pipeline_state.rs  mtl_depth_stencil_descriptor.rs  mtl_depth_stencil_state.rs  mtl_device.rs  mtl_drawable.rs  mtl_function.rs  mtl_instance_acceleration_structure_descriptor.rs  mtl_library.rs  mtl_origin.rs  mtl_primitive_acceleration_structure_descriptor.rs  mtl_region.rs  mtl_render_command_encoder.rs  mtl_render_pass_attachment_descriptor.rs  mtl_render_pass_color_attachment_descriptor.rs  mtl_render_pass_descriptor.rs  (+10 more)
(+1 files in other folders)
