[package]
name = "cobin"
version = "0.1.1"
description = "Minimalistic bindings for Metal and related Cocoa frameworks."
authors = ["Rasmus Rønn Nielsen <rasmus@polylab.dk>"]
repository = "https://github.com/raroni/cobin"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["metal", "bindings", "cocoa", "macos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
cty = "0.2.1"
bitflags = "1.2.1"
block = "0.1.6"
